[lib]
crate-type = ["cdylib"]

[package]
name = "test_dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.52.0", features = ["Win32", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_Threading"] }
